--- a/scss/componentes/base/_reset.scss
+++ b/scss/componentes/base/_reset.scss
@@ -28,7 +28,7 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Raleway', sans-serif;  
+  font-family: 'Raleway', sans-serif;
 }
 
 /**
@@ -166,8 +166,9 @@ dfn {
  */
 
 mark {
-  background-color: #ff0;
-  color: #000;
+  background-color: #bf0025
+  /**#ff0;
+  color: #000;*/
 }
 
 /**
